# limoman

./: CMakeLists.txt  README.md  glove.calib  gloveToYarp.h  gloveToYarp.xml
gloveToYarp/conf/: gloveToYarp.ini
gloveToYarp/src/: gloveToYarp.cpp  main.cpp
handControl/: CMakeLists.txt
handControl/conf/: handControl.ini  handControl_sim.ini
handControl/include/: handControl.h
handControl/script/: gloveToHandControl.xml
handControl/src/: handControl.cpp  handControlMain.cpp
handTactileControl/: .gitignore  CMakeLists.txt
handTactileControl/conf/: handTactileControl.ini  handTactileControl.ini~  handTactileControl_sim.ini  iCub_startConf  iCub_startConf~  rigthGrasp_headConf.poshead  rigthGrasp_torsoConf.postorso
handTactileControl/include/: handTactileControl.h
handTactileControl/script/: bayesOptGrasp.xml  bayesOptGrasp_sim.xml
handTactileControl/src/: handTactileControl.cpp  handTactileControl.cpp~  handTactileControlMain.cpp  handTactileControlMain.cpp~
